--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
         "host": "localhost",
         "port": 3306,
         "user": "root",
-        "password": "KetkiKule@27",
+        "password": "",
         "database": "testdb"
     }
 }
