--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "jest": "^27.5.1",
     "joi": "^17.2.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.1.0",
     "rootpath": "^0.1.2",
-    "sequelize": "^6.3.4",
-    "jest": "^27.5.1"
+    "sequelize": "^6.3.4"
   }
 }
