--- a/ami/webservice.service
+++ b/ami/webservice.service
@@ -1,10 +1,11 @@
 [Unit]
 Description=index.js
-After=network.target
+After=cloud-final.service
 
 [Service]
 Type=simple
 User=ec2-user
+EnvironmentFile=-/etc/environment
 WorkingDirectory=/home/ec2-user/
 ExecStart=/usr/bin/node /home/ec2-user/index.js
 Restart=on-failure
@@ -14,5 +15,4 @@ StandardError=syslog
 SyslogIdentifier=webservice-app
 
 [Install]
-WantedBy=multi-user.target
 WantedBy=cloud-init.target
