--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -18,10 +18,25 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        node-version: [12.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
+    - run: git archive -o webservice.zip HEAD
+    - run: cp webservice.zip ami
+    - run: cd ami
+    - run: ls -all
 
     - name: Packer build
       uses: riznob/packer-build-action@v1.5
