--- a/ami/webservice.service
+++ b/ami/webservice.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 User=ec2-user
-TimeoutStartSec=500
+TimeoutStartSec=infinity
 ExecStartPre=/bin/sleep 200
 EnvironmentFile=/home/ec2-user/environment.env
 WorkingDirectory=/home/ec2-user/
