--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,12 +32,19 @@ jobs:
     - run: cd ami
     - run: ls -all
     
+
     - name: Packer GitHub Actions
       uses: hashicorp/packer-github-actions@v0.2.0
       with:
         command: validate
         arguments: -syntax-only
         target: ami/AMI.json
+        
+    - name: Packer build
+      uses: riznob/packer-build-action@v1.5
+      with:
+        templateFile: 'AMI.json'
+        workingDir: './ami'
         varFile: 'packer-vars.json'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
