--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,8 +27,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
-      - name: Create zip
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
@@ -37,11 +40,10 @@ jobs:
       - run: mv webservice_${{  github.sha  }}.zip codedeploy_files
       - run: pwd
       - run: cd codedeploy_files
-      - run: ls -all        
+      - run: ls -all    
       
       - name: Install softwares
-        run: |
-          pwd
+      - run: pwd
           ls -ltrh
           sudo apt-get update
           sudo apt-get -qy upgrade
