--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -65,7 +65,7 @@ jobs:
             aws deploy create-deployment \
              --application-name ${{env.CODEDEPLOY_APPLICATION_NAME}} \
              --deployment-group-name ${{env.CODEDEPLOY_APPLICATION_DEPLOYMENT_GROUP_NAME}} \
-             --s3-location bucket={{ secrets.S3_CODEDEPLOY_BUCKET_NAME }},bundleType=zip,key=webservice_${{  github.sha  }}.zip \
+             --s3-location bucket=${{ secrets.S3_CODEDEPLOY_BUCKET_NAME }},bundleType=zip,key=webservice_${{  github.sha  }}.zip \
              --region ${{env.AWS_REGION}}          
           
       - name: Packer build
