Changes to code deploy

--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,9 @@ os: linux
 files:
   - source: ./
     destination: /home/ec2-user/webapp
+    overwrite: true
+    file_exists_behavior: OVERWRITE
+    
 hooks:
   BeforeInstall:
     - location: ./codedeploy/beforeInstall.sh
