--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -68,6 +68,15 @@ jobs:
              --s3-location bucket=dev.ketkikule.me.codedeploy,bundleType=zip,key=${{ env.ARTIFACT_NAME }} \
              --region ${{env.AWS_REGION}}          
           
+      - name: Packer build
+        uses: riznob/packer-build-action@v1.5
+        with:
+          templateFile: 'AMI.json'
+          workingDir: './ami'
+          varFile: 'packer-vars.json'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}        
          
    
 
