--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "jest": "^27.5.1",
     "joi": "^17.2.0",
     "jsonwebtoken": "^8.5.1",
+    "log4js": "^6.4.4",
     "multer": "^1.4.4",
     "mysql2": "^2.1.0",
     "rootpath": "^0.1.2",
-    "sequelize": "^6.3.4"
+    "sequelize": "^6.3.4",
+    "statsd-client": "^0.4.7"
   }
 }
