--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -60,23 +60,23 @@ jobs:
         run: |
           aws s3 sync ./codedeploy_files s3://${{ secrets.S3_CODEDEPLOY_BUCKET_NAME_DEMO }}  
 
-#       - name: Make CodeDeploy API call             
-#         run: |
-#             aws deploy create-deployment \
-#              --application-name ${{env.CODEDEPLOY_APPLICATION_NAME}} \
-#              --deployment-group-name ${{env.CODEDEPLOY_APPLICATION_DEPLOYMENT_GROUP_NAME}} \
-#              --s3-location bucket=${{ secrets.S3_CODEDEPLOY_BUCKET_NAME_DEMO }},bundleType=zip,key=${{ env.ARTIFACT_NAME }} \
-#              --region ${{env.AWS_REGION}}          
+      - name: Make CodeDeploy API call             
+        run: |
+            aws deploy create-deployment \
+             --application-name ${{env.CODEDEPLOY_APPLICATION_NAME}} \
+             --deployment-group-name ${{env.CODEDEPLOY_APPLICATION_DEPLOYMENT_GROUP_NAME}} \
+             --s3-location bucket=${{ secrets.S3_CODEDEPLOY_BUCKET_NAME_DEMO }},bundleType=zip,key=${{ env.ARTIFACT_NAME }} \
+             --region ${{env.AWS_REGION}}          
           
-      - name: Packer build
-        uses: riznob/packer-build-action@v1.5
-        with:
-          templateFile: 'AMI.json'
-          workingDir: './ami'
-          varFile: 'packer-vars.json'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#       - name: Packer build
+#         uses: riznob/packer-build-action@v1.5
+#         with:
+#           templateFile: 'AMI.json'
+#           workingDir: './ami'
+#           varFile: 'packer-vars.json'
+#         env:
+#           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
           
           
