--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql2": "^2.1.0",
     "rootpath": "^0.1.2",
     "sequelize": "^6.3.4",
-    "statsd-client": "^0.4.7"
+    "statsd-client": "^0.4.7",
+    "uuid": "^8.3.2"
   }
 }
