--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "fs": "0.0.1-security",
     "jest": "^27.5.1",
     "joi": "^17.2.0",
     "jsonwebtoken": "^8.5.1",
